# chess-rs

./: Cargo.toml  README.md  build-release.sh  gui.sh  tui.sh
src/: chess.rs  chess_logic.rs  main.rs  ui.rs
src/chess/: chess_display.rs  chess_errors.rs  chess_moves.rs  fen.rs  perft.rs
src/chess/chess_moves/: attack_logic.rs  king_check.rs  legal_moves.rs  meta_data.rs  perft.rs  piece_logic.rs
src/chess/chess_moves/legal_moves/: bishop_piece.rs  generic_piece.rs  king_piece.rs  knight_piece.rs  pawn_piece.rs  queen_piece.rs  rook_piece.rs
src/chess_logic/: chessboard.rs
src/ui/: game_state.rs  uci.rs
unified-chess-engine/: Cargo.toml
unified-chess-engine/src/: array_engine.rs  fen.rs  lib.rs
unified-chess-engine/src/array_engine/: chess_display.rs  chess_errors.rs  chess_moves.rs  perft.rs
unified-chess-engine/src/array_engine/chess_moves/: legal_moves.rs  meta_data.rs  piece_logic.rs
unified-chess-engine/src/array_engine/chess_moves/legal_moves/: bishop_piece.rs  generic_piece.rs  king_piece.rs  knight_piece.rs  pawn_piece.rs  queen_piece.rs  rook_piece.rs
unified-chess-gui/: Cargo.toml
unified-chess-gui/src/: cli.rs  lib.rs
unified-chess-server/: Cargo.toml
